<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>devflow.agent</groupId>
    <artifactId>forge</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>Forge</name>
    <description>Forge workflow-oriented coding agent kernel</description>

    <properties>
        <java.version>21</java.version>
        <tree.sitter.version>0.26.3</tree.sitter.version>
        <tree.sitter.html.version>0.23.2</tree.sitter.html.version>
        <tree.sitter.javascript.version>0.25.0</tree.sitter.javascript.version>
        <tree.sitter.java.version>0.23.5</tree.sitter.java.version>
        <tree.sitter.typescript.version>0.23.2</tree.sitter.typescript.version>
        <tree.sitter.python.version>0.25.0</tree.sitter.python.version>
        <tree.sitter.go.version>0.25.0</tree.sitter.go.version>
        <tree.sitter.css.version>0.23.1</tree.sitter.css.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-json</artifactId>
        </dependency>
        <dependency>
            <groupId>io.github.bonede</groupId>
            <artifactId>tree-sitter</artifactId>
            <version>${tree.sitter.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonede</groupId>
            <artifactId>tree-sitter-html</artifactId>
            <version>${tree.sitter.html.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonede</groupId>
            <artifactId>tree-sitter-javascript</artifactId>
            <version>${tree.sitter.javascript.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonede</groupId>
            <artifactId>tree-sitter-java</artifactId>
            <version>${tree.sitter.java.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonede</groupId>
            <artifactId>tree-sitter-typescript</artifactId>
            <version>${tree.sitter.typescript.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonede</groupId>
            <artifactId>tree-sitter-python</artifactId>
            <version>${tree.sitter.python.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonede</groupId>
            <artifactId>tree-sitter-go</artifactId>
            <version>${tree.sitter.go.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonede</groupId>
            <artifactId>tree-sitter-css</artifactId>
            <version>${tree.sitter.css.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.18.3</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
